# ism_active

./: .gitignore  AUTHORS  COPYING  Makefile  Makefile.am  README  config.h.in  configure.ac  coulomb.cc
ISM/: .gitignore  3dvecs.hh  Makefile  Makefile.am  ck.cc  ckiso.cc  cknew.cc  cko.cc  ckt.cc  cktiso.cc  clambdat.cc  cmarray.hh  examinetraj.cc  isi.cc  isi.hh  isi_potential.cc  isi_potential.hh  ism-pl.cc  ism.cc  ism_creat_conf2.cc  ism_create_conf.cc  ism_potential.cc  ovicsek.cc  ovicsek.hh  ovicsek_ST.cc  ovicsek_ST.hh  ovicsek_env.cc  ovicsek_env.hh  polarization.cc  social.cc  social.hh  social_potential.cc  social_potential.hh  tcorr1.cc  traj212col.cc  vici.cc  vici.hh  vicsek.cc
sim_vicsek_giulia/: Makefile.am  ct_polarization.cc  ct_polarization2.cc  traj212col_new.cc  vic.ini  vic_main.cc  vici_g.cc  vici_g.hh
test (coulomb)/: .gitignore  coulomb-ham.cc  coulomb.cc
